// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
<div
  className=" css-qhvpk8-CardStyle eguc8hf0"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon eguc8hf1"
    src="test-image-stub"
  />
  <div
    className=" css-bgc4kb-TopicStyle eguc8hf4"
  >
    topic
  </div>
  <div
    className=" css-mk6kj1-DescriptionStyle eguc8hf5"
  >
    Description
  </div>
</div>
`;

exports[`with Badge 1`] = `
<div
  className=" css-qhvpk8-CardStyle eguc8hf0"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon eguc8hf1"
    src="test-image-stub"
  />
  <div
    className="css-vz2qld-BadgeStyle eguc8hf2"
  >
    <div
      className="css-16zxq88-StyledBadge e1w3mjmy0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className=" css-bgc4kb-TopicStyle eguc8hf4"
  >
    topic
  </div>
  <div
    className=" css-mk6kj1-DescriptionStyle eguc8hf5"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align 1`] = `
<div
  className="center css-qhvpk8-CardStyle eguc8hf0"
>
  <img
    alt=""
    className="center css-142sfdf-StyledIcon eguc8hf1"
    src="test-image-stub"
  />
  <div
    className="center css-bgc4kb-TopicStyle eguc8hf4"
  >
    topic
  </div>
  <div
    className="center css-mk6kj1-DescriptionStyle eguc8hf5"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align and Badge 1`] = `
<div
  className="center css-qhvpk8-CardStyle eguc8hf0"
>
  <img
    alt=""
    className="center css-142sfdf-StyledIcon eguc8hf1"
    src="test-image-stub"
  />
  <div
    className="css-vz2qld-BadgeStyle eguc8hf2"
  >
    <div
      className="css-16zxq88-StyledBadge e1w3mjmy0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="center css-bgc4kb-TopicStyle eguc8hf4"
  >
    topic
  </div>
  <div
    className="center css-mk6kj1-DescriptionStyle eguc8hf5"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align and Link 1`] = `
<div
  className="center css-qhvpk8-CardStyle eguc8hf0"
>
  <img
    alt=""
    className="center css-142sfdf-StyledIcon eguc8hf1"
    src="test-image-stub"
  />
  <div
    className="css-hpm16i-LinkStyle eguc8hf3"
  >
    <svg
      width={13}
    />
  </div>
  <div
    className="center css-bgc4kb-TopicStyle eguc8hf4"
  >
    topic
  </div>
  <div
    className="center css-mk6kj1-DescriptionStyle eguc8hf5"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align, Link and Badge 1`] = `
<div
  className="center css-qhvpk8-CardStyle eguc8hf0"
>
  <img
    alt=""
    className="center css-142sfdf-StyledIcon eguc8hf1"
    src="test-image-stub"
  />
  <div
    className="css-vz2qld-BadgeStyle eguc8hf2"
  >
    <div
      className="css-16zxq88-StyledBadge e1w3mjmy0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="css-hpm16i-LinkStyle eguc8hf3"
  >
    <svg
      width={13}
    />
  </div>
  <div
    className="center css-bgc4kb-TopicStyle eguc8hf4"
  >
    topic
  </div>
  <div
    className="center css-mk6kj1-DescriptionStyle eguc8hf5"
  >
    Description
  </div>
</div>
`;

exports[`with Link 1`] = `
<div
  className=" css-qhvpk8-CardStyle eguc8hf0"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon eguc8hf1"
    src="test-image-stub"
  />
  <div
    className="css-hpm16i-LinkStyle eguc8hf3"
  >
    <svg
      width={13}
    />
  </div>
  <div
    className=" css-bgc4kb-TopicStyle eguc8hf4"
  >
    topic
  </div>
  <div
    className=" css-mk6kj1-DescriptionStyle eguc8hf5"
  >
    Description
  </div>
</div>
`;

exports[`with Link and Badge 1`] = `
<div
  className=" css-qhvpk8-CardStyle eguc8hf0"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon eguc8hf1"
    src="test-image-stub"
  />
  <div
    className="css-vz2qld-BadgeStyle eguc8hf2"
  >
    <div
      className="css-16zxq88-StyledBadge e1w3mjmy0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="css-hpm16i-LinkStyle eguc8hf3"
  >
    <svg
      width={13}
    />
  </div>
  <div
    className=" css-bgc4kb-TopicStyle eguc8hf4"
  >
    topic
  </div>
  <div
    className=" css-mk6kj1-DescriptionStyle eguc8hf5"
  >
    Description
  </div>
</div>
`;
